# btecify-server-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  build-image.bat  pyproject.toml  start-app.sh  todo.txt
alembic/: env.py
alembic/versions/: 697676896d95_.py  b832ce4f779b_init.py  c219f5c3ee5f_.py  ce63d21ad89d_add_extension_to_song_model.py  d83b07b7177c_.py
app/: crud.py  db.py  extractor.py  jobmanager.py  main.py  models.py  schemas.py
tests/: test_main.py  testconf.py
