[tool.poetry]
name = "btecify-server"
version = "0.1.0"
description = ""
authors = ["Tazmondo <fondcoolman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.1"
uvicorn = "0.17.6"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
yt-dlp = "^2022.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
