[tool.poetry]
name = "btecify-server"
version = "0.1.0"
description = ""
authors = ["Tazmondo <fondcoolman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.1"
uvicorn = "0.17.6"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
yt-dlp = "^2022.4.8"
python-multipart = "^0.0.5"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.dev-dependencies]
fastapi-profiler = "^1.0.0"
pytest = "^7.1.1"
requests = "^2.27.1"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
